--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="item">
           <!-- Center and resize the image -->
           <div class="has-text-centered">
-            <img src="static/images/method.pdf" alt="MY ALT TEXT" style="max-width: 85%; height: auto;" />
+            <img src="static/images/methodology.png" alt="MY ALT TEXT" style="max-width: 85%; height: auto;" />
           </div>
           <h2 class="subtitle has-text-centered">
             A schematic overview of the training process of the student model of DUDES. DUDES is an easy-to-adapt framework for efficiently estimating predictive uncertainty through student-teacher distillation. 
@@ -139,7 +139,7 @@
         </div>
         <div class="item">
           <div class="has-text-centered">
-            <img src="static/images/uncertain_pixels_removed.pdf" alt="MY ALT TEXT" style="max-width: 85%; height: auto;" />
+            <img src="static/images/uncertain_pixels_removed.png" alt="MY ALT TEXT" style="max-width: 85%; height: auto;" />
           </div>
           <h2 class="subtitle has-text-centered">
             Comparison between the student's and the teacher's mean Intersection over Union (mIoU). We progressively ignore an increasing percentage of pixels in the segmentation prediction
