--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <h2 class="subtitle has-text-centered">
             Example images from the Cityscapes validation set (a) with corresponding ground truth labels (b), our student's segmentation predictions (c), a binary accuracy map (d), 
             and the student's uncertainty prediction (e). White pixels in the binary accuracy map are either incorrect predictions or void classes. 
-            Latter appear black in the ground truth labels. For the uncertainty prediction, brighter pixels represent higher predictive uncertainties
+            Latter appear black in the ground truth labels. For the uncertainty prediction, brighter pixels represent higher predictive uncertainties.
           </h2>
         </div>
   </div>
