--- a/index.html
+++ b/index.html
@@ -120,47 +120,55 @@
 <!-- End paper abstract -->
 
 
-<!-- Image carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item">
-          <!-- Center and resize the image -->
-          <div class="has-text-centered">
-            <img src="static/images/methodology.png" alt="MY ALT TEXT" style="max-width: 85%; height: auto;" />
-          </div>
-          <h2 class="subtitle has-text-centered">
-            A schematic overview of the training process of the student model of DUDES. DUDES is an easy-to-adapt framework for efficiently estimating predictive uncertainty through student-teacher distillation. 
-            The student model simultaneously outputs a segmentation prediction alongside a corresponding uncertainty prediction. 
-            Training the student involves a regular segmentation loss with the ground truth labels and an additional uncertainty loss. 
-            As ground truth uncertainties, we compute the predictive uncertainty of a Deep Ensemble, thereby acting as the teacher.
-          </h2>
-        </div>
-        <div class="item">
-          <div class="has-text-centered">
-            <img src="static/images/uncertain_pixels_removed.png" alt="MY ALT TEXT" style="max-width: 85%; height: auto;" />
-          </div>
-          <h2 class="subtitle has-text-centered">
-            Comparison between the student's and the teacher's mean Intersection over Union (mIoU). We progressively ignore an increasing percentage of pixels in the segmentation prediction
-             and simultaneously re-evaluated the mIoU. The pixels are sorted based on their predictive uncertainty in descending order, thus removing the most uncertain segmentation predictions first.
-          </h2>
-        </div>
-        <div class="item">
-          <div class="has-text-centered">
-            <img src="static/images/Qualitative_Examples.png" alt="MY ALT TEXT" style="max-width: 85%; height: auto;" />
-          </div>
-          <h2 class="subtitle has-text-centered">
-            Example images from the Cityscapes validation set (a) with corresponding ground truth labels (b), our student's segmentation predictions (c), a binary accuracy map (d), 
-            and the student's uncertainty prediction (e). White pixels in the binary accuracy map are either incorrect predictions or void classes. 
-            Latter appear black in the ground truth labels. For the uncertainty prediction, brighter pixels represent higher predictive uncertainties.
-          </h2>
-        </div>
+<!-- Methodology Section -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3 has-text-centered">Methodology</h2>
+    <div class="columns is-centered">
+      <div class="column is-full has-text-centered">
+        <img src="static/images/methodology.png" alt="DUDES Method Overview" style="max-width: 85%; height: auto;" />
+        <h2 class="subtitle has-text-centered">
+          A schematic overview of the training process of the student model of DUDES. DUDES is an easy-to-adapt framework for efficiently estimating predictive uncertainty through student-teacher distillation. 
+          The student model simultaneously outputs a segmentation prediction alongside a corresponding uncertainty prediction. 
+          Training the student involves a regular segmentation loss with the ground truth labels and an additional uncertainty loss. 
+          As ground truth uncertainties, we compute the predictive uncertainty of a Deep Ensemble, thereby acting as the teacher.
+        </h2>
+      </div>
+    </div>
   </div>
-</div>
-</div>
 </section>
-<!-- End image carousel -->
+
+<!-- Results Section -->
+<section class="section hero is-small">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3 has-text-centered">Quantitative Results</h2>
+    <div class="columns is-centered">
+      <div class="column is-full has-text-centered">
+        <img src="static/images/uncertain_pixels_removed.png" alt="Uncertain Pixels Removed" style="max-width: 85%; height: auto;" />
+        <h2 class="subtitle has-text-centered">
+          Comparison between the student's and the teacher's mean Intersection over Union (mIoU). We progressively ignore an increasing percentage of pixels in the segmentation prediction
+          and simultaneously re-evaluated the mIoU. The pixels are sorted based on their predictive uncertainty in descending order, thus removing the most uncertain segmentation predictions first.
+        </h2>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section hero is-small is-light">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3 has-text-centered">Qualitative Results</h2>
+    <div class="columns is-centered">
+      <div class="column is-full has-text-centered">
+        <img src="static/images/Qualitative_Examples.png" alt="Qualitative Examples" style="max-width: 85%; height: auto;" />
+        <h2 class="subtitle has-text-centered">
+          Example images from the Cityscapes validation set (a) with corresponding ground truth labels (b), our student's segmentation predictions (c), a binary accuracy map (d), 
+          and the student's uncertainty prediction (e). White pixels in the binary accuracy map are either incorrect predictions or void classes. 
+          Latter appear black in the ground truth labels. For the uncertainty prediction, brighter pixels represent higher predictive uncertainties.
+        </h2>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- Paper Conclusion -->
 <section class="section hero is-light">
